--- a/styles.css
+++ b/styles.css
@@ -207,3 +207,33 @@ p
 { 
     padding-left: 40px; 
 }
+.about.skill .box
+{
+    position: relative;
+    width: 100%;
+    display: grid;
+    grid-template-columns: 150px 1fr;
+    justify-content: center;
+    align-items:center;
+}
+.about.skill .box h4
+{
+    color: #333;
+    font-weight: 500;
+    margin-bottom: 5px;
+}
+.about.skill .box .percent
+{
+    position: relative;
+    width: 100%;
+    height: 10px;
+    background: #e3e3e3;
+}
+.about.skill .box .percent div
+{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background: #3590d2;
+}
